[package]
name = "pulse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.11", features = ["derive"] }
cli-table = "0.4.7"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tabled = "0.14.0"
thiserror = "1.0.50"
uuid = { version = "1.6.1", features = ["v4", "fast-rng", "serde"] }
